tests/errors/semantic/blocking/COMPLEX_TYPE.py

def f():
    import numpy as np
    a = np.zeros(10)
    b = np.ones(9,dtype=type(a))
